.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Personal__c.object
<CustomObject>
    <fields>
        <fullName>xcdhcm__Passport_country_of_issue__c</fullName>
        <label>Passport country of issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Passport_expiry_date__c</fullName>
        <label>Passport expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Passport_expiry_reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to drive secondary workflow to re-queue Passport expiry reminder</description>
        <label>Passport expiry reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Passport_issue_date__c</fullName>
        <label>Passport issue date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Passport_number__c</fullName>
        <label>Passport number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_in_start_period__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Input manually
Used to determine WHEN we pay an Employee</description>
        <inlineHelpText>The Employee will be eligible for payroll in the period containing their start date (where this is later than the First XCD pay date). If this is unchecked, any outstanding payments will be made in the subsequent period.</inlineHelpText>
        <label>Pay in start period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Payment_method__c</fullName>
        <description>BACS value is being used elsewhere for RTI and payment validations</description>
        <inlineHelpText>Method of paying the employee</inlineHelpText>
        <label>Payment method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cheque</fullName>
                    <default>true</default>
                    <label>Cheque</label>
                </value>
                <value>
                    <fullName>BACS</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Other - Electronic Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Payroll_no__c</fullName>
        <formula>xcdhcm__Employee_Details__r.xcdhcm__Payroll_no__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payroll no</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pension_date__c</fullName>
        <description>Date at which employee becomes eligible for State pension</description>
        <inlineHelpText>Date at which employee becomes eligible for State pension</inlineHelpText>
        <label>Reaches retirement age</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Personal_address_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current address</label>
        <referenceTo>xcdhcm__Personal_address__c</referenceTo>
        <relationshipLabel>Personal</relationshipLabel>
        <relationshipName>Personal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Personal_data_confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Using this field for GDPR consents, to know whether the employee has confirmed his personal data retention or not.(NPPD-1545)</description>
        <label>Personal data confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Personal_data_confirmed_at__c</fullName>
        <description>Using this field for GDPR consents, to know at what date/time did the employee confirmed his personal data retention.(NPPD-1545)</description>
        <label>Personal data confirmed at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Personal_email__c</fullName>
        <label>Personal email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Personal_mobile__c</fullName>
        <label>Personal mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Place_of_issue__c</fullName>
        <label>Place of issue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Postcode__c</fullName>
        <formula>xcdhcm__Personal_address_L__r.xcdhcm__Postal_zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Postgraduate_loan_plan__c</fullName>
        <label>Postgraduate loan plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Postgrad E&amp;W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_NI_category2__c</fullName>
        <label>Previous NI category2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_NI_category__c</fullName>
        <label>Previous NI category</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_effective_from2__c</fullName>
        <label>NI category previous effective from2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_effective_from__c</fullName>
        <label>NI category previous effective from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_name__c</fullName>
        <label>Previous name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Profile_name__c</fullName>
        <formula>xcdhcm__Employee_Details__r.xcdhcm__User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Records Profile as set on the Employee&apos;s User record</inlineHelpText>
        <label>Profile name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reason_for_change__c</fullName>
        <label>Reason for change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marriage</fullName>
                </value>
                <value>
                    <fullName>Correcting error</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Recently_bereaved_spouse_or_civil_prtnr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For use in pension payroll only - populated when the employee record is the recipient of a pension that related to a 3rd party (deceased pensioner)</description>
        <inlineHelpText>Populate this checkbox when the person receiving the pension is not the person who contributed to the pension scheme.</inlineHelpText>
        <label>Recently bereaved spouse or civil prtnr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Registered_disabled__c</fullName>
        <label>Registered disabled</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Scottish_variable_rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scottish variable rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Second_NI_category_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second NI category change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Secondment__c</fullName>
        <label>Secondment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In UK 183 days +</fullName>
                </value>
                <value>
                    <fullName>In UK &lt; 183 days</fullName>
                </value>
                <value>
                    <fullName>Living abroad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Serial__c</fullName>
        <description>To arrange the employees serially for ease of payroll automation purpose</description>
        <label>Serial number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Sexual_orientation__c</fullName>
        <label>Sexual orientation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Skype_ID__c</fullName>
        <label>Skype ID</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Sort_code__c</fullName>
        <label>xSort code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Starter_declaration__c</fullName>
        <description>A: This is my first job since last 6 April and I have not been receiving taxable Jobseekers allowance, Employment and Support Allowance, taxable Incapacity Benefit, state pension or occupational pension. 
B: This is my only job, but since last 6 April I have had another job or have received taxable Jobseekers allowance, Employment and Support Allowance or taxable Incapacity Benefit. I do not receive state pension or occupational pension. 
C: I have another job or receive a state or occupational pension.</description>
        <label>Starter declaration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__State_pension_age_at__c</fullName>
        <description>Date on which this Employee will reach state pension age
Populated by workflow</description>
        <label>State pension age at</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Student_loan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>I have a Student Loan which is not fully repaid</inlineHelpText>
        <label>Student or postgraduate loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Student_loan_plan__c</fullName>
        <label>Student loan plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan 1</fullName>
                </value>
                <value>
                    <fullName>Plan 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_basis__c</fullName>
        <label>Tax basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week1/Month1</fullName>
                </value>
                <value>
                    <fullName>Cumulative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_code__c</fullName>
        <label>Tax code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_code_uplift__c</fullName>
        <description>Used in the payroll. Updated through code with value global settings tax year</description>
        <label>Tax code uplift</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_month_number__c</fullName>
        <label>Tax month number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_regime_indicator__c</fullName>
        <label>Tax regime indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_week_number__c</fullName>
        <label>Tax week number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Taxable_pay_to_date__c</fullName>
        <label>Total pay to date</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Test_employee__c</fullName>
        <formula>xcdhcm__Employee_Details__r.xcdhcm__Test_employee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Timesheet__c</fullName>
        <description>Deprecated, the Timesheet field is available in Job Role object</description>
        <label>xTimesheet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                    <default>true</default>
                    <label>Full</label>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Dr</fullName>
                </value>
                <value>
                    <fullName>Prof</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_pay_year_to_date__c</fullName>
        <label>xTotal pay year to date</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_tax_to_date__c</fullName>
        <label>Total tax to date</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__UK_visa_type__c</fullName>
        <label>UK visa type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>British Citizenship</fullName>
                </value>
                <value>
                    <fullName>EEA - Worker Registration Scheme</fullName>
                </value>
                <value>
                    <fullName>Indefinite Leave to Remain (ILR)</fullName>
                </value>
                <value>
                    <fullName>Tier 1 - Entrepreneurs</fullName>
                </value>
                <value>
                    <fullName>Tier 1 - Investors</fullName>
                </value>
                <value>
                    <fullName>Tier 1 - Post Study Work (PSW)</fullName>
                </value>
                <value>
                    <fullName>Tier 1 - UK General Highly Skilled (HSMP)</fullName>
                </value>
                <value>
                    <fullName>Tier 2 - General Skilled Worker</fullName>
                </value>
                <value>
                    <fullName>Tier 2 - Intra-Company Transfer</fullName>
                </value>
                <value>
                    <fullName>Tier 2 - Minister of Religion</fullName>
                </value>
                <value>
                    <fullName>Tier 2 - Sportsperson</fullName>
                </value>
                <value>
                    <fullName>Tier 3 - Low Skilled Worker</fullName>
                </value>
                <value>
                    <fullName>Tier 4 - Student</fullName>
                </value>
                <value>
                    <fullName>Tier 5 - Youth Mobility (Working Holiday)</fullName>
                </value>
                <value>
                    <fullName>UK Visitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Vehicle_colour__c</fullName>
        <label>Vehicle colour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vehicle_insurance_expires__c</fullName>
        <label>Vehicle insurance expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vehicle_insurance_start_date__c</fullName>
        <label>Vehicle insurance start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vehicle_make_model__c</fullName>
        <label>Vehicle make/model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vehicle_registration_number__c</fullName>
        <label>Vehicle registration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Visa_expiry_reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to drive secondary workflow to re-queue Visa expiry reminder</description>
        <label>Visa expiry reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Visa_type__c</fullName>
        <label>Visa type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Visa_valid_from__c</fullName>
        <label>Visa valid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Visa_valid_to__c</fullName>
        <label>Visa valid to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_email__c</fullName>
        <formula>xcdhcm__Employee_Details__r.xcdhcm__User__r.Email</formula>
        <label>Work email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_mobile__c</fullName>
        <formula>xcdhcm__Employee_Details__r.xcdhcm__User__r.MobilePhone</formula>
        <label>Work mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_mobile_input__c</fullName>
        <label>Work mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_phone__c</fullName>
        <formula>xcdhcm__Employee_Details__r.xcdhcm__User__r.Phone</formula>
        <label>Work phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_phone_input__c</fullName>
        <label>Work phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__X16th_birthday__c</fullName>
        <description>Used to determine auto enrolment eligibility</description>
        <formula>DATE(
  YEAR(xcdhcm__DOB__c) + 16,
  MONTH(xcdhcm__DOB__c),
  DAY(xcdhcm__DOB__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>16th birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__X22nd_birthday__c</fullName>
        <description>Used to determine auto enrolment eligibility</description>
        <formula>IF(
  AND(
    MONTH(xcdhcm__DOB__c) = 2,
    DAY(xcdhcm__DOB__c) = 29),
  DATE(YEAR(xcdhcm__DOB__c) + 22, 3, 1),
  DATE(YEAR(xcdhcm__DOB__c) + 22, MONTH(xcdhcm__DOB__c), DAY(xcdhcm__DOB__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>22nd birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__X75th_birthday__c</fullName>
        <description>Used to determine auto enrolment eligibility</description>
        <formula>IF(
  AND(
    MONTH(xcdhcm__DOB__c) = 2,
    DAY(xcdhcm__DOB__c) = 29),
  DATE(YEAR(xcdhcm__DOB__c) + 75, 3, 1),
  DATE(YEAR(xcdhcm__DOB__c) + 75, MONTH(xcdhcm__DOB__c), DAY(xcdhcm__DOB__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>75th birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__zCompany__c</fullName>
        <description>Used for HR Admin record sharing</description>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__zDepartment__c</fullName>
        <description>Updates Department from Employee to support Department Administrator sharing</description>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__zPayroll_eligibility__c</fullName>
        <description>Used for record sharing with Payroll Administrators</description>
        <label>zPayroll eligibility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__z_work_email__c</fullName>
        <description>Created for a field update to populate the work email address on the personal object to be used for email alerts.</description>
        <label>z work email</label>
        <type>Email</type>
    </fields>
    <label>Personal</label>
    <listViews>
        <fullName>DO_NOT_TOUCH_PAYROLL_AUTOMATION</fullName>
        <columns>xcdhcm__Employee_Details__c</columns>
        <columns>xcdhcm__NI_category__c</columns>
        <columns>xcdhcm__Tax_code__c</columns>
        <columns>xcdhcm__Tax_basis__c</columns>
        <columns>xcdhcm__DOB__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>xcdhcm__Employee_Details__c</field>
            <operation>startsWith</operation>
            <value>DO NOT TOUCH</value>
        </filters>
        <label>DO NOT TOUCH PAYROLL AUTOMATION PERSONAL</label>
    </listViews>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>xcdhcm__Record_Creator__c</fullName>
        <label>Record Creator</label>
    </sharingReasons>
    <validationRules>
        <fullName>xcdhcm__Age_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(FLOOR((TODAY() - xcdhcm__DOB__c)/365.25)&lt;15,
   FLOOR((TODAY() - xcdhcm__DOB__c)/365.25)&gt;85)</errorConditionFormula>
        <errorMessage>Age must be between 15 and 85</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__BACS_requires_account_details</fullName>
        <active>true</active>
        <description>Validation to ensure if Payment method is BACS then account details are added</description>
        <errorConditionFormula>and(
  ispickval(xcdhcm__Payment_method__c, &quot;BACS&quot;),
  or(
    isblank(xcdhcm__P_Sort_code__c),  
    isblank(xcdhcm__Account_number__c),
    isblank(xcdhcm__Account_name__c)))</errorConditionFormula>
        <errorMessage>You have selected a payment method of BACS and have not supplied bank details. Please complete the account name, sort code, and account number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Change_In_Name</fullName>
        <active>true</active>
        <description>change name only from the change name button under personal tab of employee.</description>
        <errorConditionFormula>OR
(
	IF
	(
		AND
                (
                  CONTAINS( xcdhcm__Employee_Details__r.xcdhcm__User__r.Profile.Name , &apos;HRMS&apos;), 
                  OR
		  (
			ISCHANGED( xcdhcm__Legal_name__c ),
			ISCHANGED( xcdhcm__Known_name__c ),
			ISCHANGED( xcdhcm__Middle_name__c),
			ISCHANGED( xcdhcm__Previous_name__c)
		   )
                ),
		IF
		(
			xcdhcm__Employee_Details__r.xcdhcm__User__r.xcdhcm__Allow_Name_Change__c, 
			false,
			true
		),
		false
	),
	IF
	(
		AND
                (
                  CONTAINS( xcdhcm__Employee_Details__r.xcdhcm__User__r.Profile.Name , &apos;HRMS&apos;), 
                  ISCHANGED(Name)
                ),
		IF
		(
			AND
			(
				Name ==  xcdhcm__First_name__c + &apos; &apos;+ xcdhcm__Last_name__c,
				xcdhcm__Employee_Details__r.xcdhcm__User__r.xcdhcm__Allow_Name_Change__c 
			),
			false,
			true
		),
		false
	)
)</errorConditionFormula>
        <errorMessage>Change names for HR users using the Change name button from personal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__EmpDetail_Sort_Code_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(not(ISBLANK( xcdhcm__P_Sort_code__c )),NOT(REGEX( xcdhcm__P_Sort_code__c ,&quot;[0-9]{2}-[0-9]{2}-[0-9]{2}&quot;)),FALSE)</errorConditionFormula>
        <errorDisplayField>xcdhcm__P_Sort_code__c</errorDisplayField>
        <errorMessage>Sort Code should be of the format 99-99-99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Payroll_Admin_sets_NI_and_bank_details</fullName>
        <active>true</active>
        <description>Validation rule is to allow only admin to change the following fields for Payroll clients 
1)Title 
2)Name 
3)Gender 
4)NI number</description>
        <errorConditionFormula>IF(AND(NOT(CONTAINS($Profile.Name, &apos;Admin&apos;)),OR(xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__Net_payroll__c, xcdhcm__Employee_Details__r.xcdhcm__Company__r.xcdhcm__Parent_Company__r.xcdhcm__Net_payroll__c)), OR(ISCHANGED(xcdhcm__Title__c),ISCHANGED(Name),ISCHANGED(xcdhcm__Gender__c),ISCHANGED(xcdhcm__National_insurance_number__c)), false)</errorConditionFormula>
        <errorMessage>Please contact the payroll administrator to change your address details.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Payroll_Clients_Need_Tax_Code_and_Basis</fullName>
        <active>true</active>
        <description>Check that if a payroll client is inputting tax code then they also input a value for tax basis</description>
        <errorConditionFormula>and(
not(isblank( xcdhcm__Employee_Details__r.xcdhcm__Job_Role__r.xcdhcm__Companies__r.xcdhcm__Employer__c)),
not(isblank( xcdhcm__Tax_code__c)),
not(ispickval( xcdhcm__Tax_basis__c, &quot;Cumulative&quot;)),
not(ispickval( xcdhcm__Tax_basis__c, &quot;Week1/Month1&quot;)))</errorConditionFormula>
        <errorDisplayField>xcdhcm__Tax_code__c</errorDisplayField>
        <errorMessage>Please ensure that when you input Tax code you also add a Tax basis (i.e., Cumulative or Week1/Month1)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Starter_A_must_be_cumulative</fullName>
        <active>true</active>
        <errorConditionFormula>and(
text( xcdhcm__Starter_declaration__c ) = &quot;A&quot;,
text( xcdhcm__Tax_basis__c ) &lt;&gt; &quot;Cumulative&quot;,
isblank(priorvalue (xcdhcm__Tax_basis__c)))</errorConditionFormula>
        <errorMessage>You have entered a Starter declaration of A.  Please set the tax basis as Cumulative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Starter_B_no_YTD_must_be_W1M1</fullName>
        <active>true</active>
        <errorConditionFormula>and(
text( xcdhcm__Starter_declaration__c ) = &quot;B&quot;,
text( xcdhcm__Tax_basis__c ) = &quot;Cumulative&quot;,
isblank(priorvalue (xcdhcm__Tax_basis__c)),
isblank( xcdhcm__Taxable_pay_to_date__c ))</errorConditionFormula>
        <errorMessage>You have entered a Starter declaration of B but have not provided any P45 YTD earnings.  Please set the tax basis as Week 1 Month 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Starter_C_BR_or_0T_and_W1M1</fullName>
        <active>true</active>
        <description>Where option C is selected for the Starter declaration:
- tax code must be either BR or 0T
- tax basis must be W1M1</description>
        <errorConditionFormula>and(
text( xcdhcm__Starter_declaration__c ) = &quot;C&quot;,
isblank(priorvalue(xcdhcm__Tax_basis__c)),
or(
  text( xcdhcm__Tax_basis__c ) = &quot;Cumulative&quot;,
   and( xcdhcm__Tax_code__c &lt;&gt; &quot;BR&quot;,
       xcdhcm__Tax_code__c &lt;&gt; &quot;0T&quot;))
)</errorConditionFormula>
        <errorMessage>You have entered a Starter declaration of C.
If the employee has another job tax code should be BR.
If you entered C because the employee did not provide a declaration, tax code should be 0T
Please set the tax basis as Week 1 Month 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Student_loan_must_have_a_payment_plan</fullName>
        <active>true</active>
        <description>Since 2018 if an employee has a student loan this must also have a payment plan</description>
        <errorConditionFormula>or(
and(xcdhcm__Student_loan__c ,ISBLANK(text( xcdhcm__Student_loan_plan__c )),ISBLANK(text(xcdhcm__Postgraduate_loan_plan__c))),
and(not(xcdhcm__Student_loan__c) ,or(not(ISBLANK(text( xcdhcm__Student_loan_plan__c ))),not(ISBLANK(text(xcdhcm__Postgraduate_loan_plan__c)))))
)</errorConditionFormula>
        <errorMessage>If the employee has a student and / or postgraduate loan the loan must also have a payment plan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Tax_code_not_OT</fullName>
        <active>true</active>
        <description>Clients often enter OT rather than 0T - this prevents data entry error</description>
        <errorConditionFormula>or(xcdhcm__Tax_code__c = &quot;OT&quot;, xcdhcm__Tax_code__c = &quot;oT&quot;)</errorConditionFormula>
        <errorMessage>You have entered OT as the tax code.  Please check - did you intend to enter 0T</errorMessage>
    </validationRules>
</CustomObject>